# NectarNotes

./: Dockerfile  LICENSE.md  NectarNotes - Copia.css  NectarNotes - Copia.html  Perfil do YouTube.html  README.md  TelaCadastro.html  TelaLogin - Copia.html  TelaLogin.css  Teste Sql.sql  bolasdogustavo.html  docker-compose.yml  example.env  index.html  manage.py  pai.html  principal.html  pyproject.toml  telaPrincipal.css
Album/: MusicasSalvas.css  MusicasSalvas.html
Configurações/: Config.css  TelaConfig.html
NECTAR/: asgi.py  settings.py  urls.py  wsgi.py
NectarNotes/: TelaLogin.css  TelaLogin.html  index.html
NectarNotes-Ideias/: TelaCadastro.html  TelaLogin - Copia.html
NectarNotes-Principal/Tela Cadastro/: TelaCadastro.css
NectarNotes-Principal/Tela Login/: TelaLogin.html  TelaLogin.js
NectarNotes-Principal/Tela Principal/: index.html  script.js  telaPrincipal.css
NectarNotes-Principal/Tela de Perfil/: TelaPerfil.html
Pesquisa/: Pesquisa.css  TelaPesquisa.html
Pets/: Pets.css  TelaPets.html
Principal/: index.html  principal.html  resultado.html  telaPrincipal.css
Tela Cadastro/: TelaCadastro.css  TelaCadastro.html  TelaCadastro.js
Tela Login/: TelaLogin.css
Tela Principal/: index.html
core/: urls.py  views.py
nginx/: nginx.conf
paginadosresultadosdepesquisa.html/: resultado.css
perfil/: Perfil.css  TelaPerfil.html
telademusica.html/: iframedatelademusica.html  ifrmaedatelademusica.css  telademusica.css  telademusica.html
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
utils/: models.py
(+47 files in other folders)
